# pycr2res

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  cr2res_hello.py  main.py  pyproject.toml
pycr2res/: __init__.py  wavecorr.py
pyrecipes/: cr2res_util_wavecorr.py
